# journel_backend

./: .gitignore  ARCHITECTURE.MD  README.md  auth.py  database.py  journal.db  llm.py  main.py  middleware.py  pyproject.toml  requirements.txt
